# TeachBot

./: .gitignore  LICENSE  README.md  README_1604.md  TODO.txt  edit_intera.py  install.sh  launch_nano_teachbot.sh  setup.sh  teachbot.sh
browser/: CMakeLists.txt  app.js  package-lock.json  package.json  package.xml  websocket.launch  www.js
browser/public/audio/: create_mp3.py  make_speech.py
browser/public/css/: 2.css  main.css  sawyer.css
browser/public/html/: 1.html  2.html  cuff_interaction.html  home.html  robot_configuration.html  table.html  test_module_page.html  urTest.html
browser/public/js/: 0_ur_test.js  1.js  1_bkup.js  2.js  3.js  Home.js  Module.js  table.js
browser/public/js/instructions/: draw.js  numeric_input.js  set_graphic_mode.js  set_robot_mode.js  wait.js
browser/public/js/json/: 1.json  1_backup.json  2.json  42.json  extra.json  multipleDof.txt
browser/public/js/utils/: arc3pt.js  displayPointerPosition.js  display_choices.js  display_program.js  draw_ball.js  draw_bar.js  draw_encoder.js  draw_goal.js  draw_odometer.js  draw_pos_orien.js  draw_rectangle.js  draw_spring.js
browser/public/text/module1/: 1dOrientation.txt  2dPosition.txt  MultipleMotors.txt  OneMotor.txt  encoders.txt  end.txt  feedback.txt  intro.txt  kinematics.txt  motors.txt  waypoints.txt
browser/public/text/module2/: 1Dof.txt  1Dorient.txt  1Dpos.txt  1Dpos_fail.txt  2.txt  2Dof.txt  bins.txt  camera.txt  coding.txt  comboPosOrient.txt  end.txt  intro.txt  multipleDof.txt
robot/: start.py
robot/.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
robot/install/: _setup_util.py  local_setup.sh  setup.sh
robot/install/include/button_box/: ButtonInfo.h  ButtonInfoRequest.h  ButtonInfoResponse.h
robot/install/include/intera_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  CalibrationCommandAction.h  CalibrationCommandActionFeedback.h  CalibrationCommandActionGoal.h  CalibrationCommandActionResult.h  CalibrationCommandFeedback.h  CalibrationCommandGoal.h  CalibrationCommandResult.h  CameraControl.h  CameraSettings.h  CollisionAvoidanceState.h  CollisionDetectionState.h  DigitalIOState.h  DigitalIOStates.h  DigitalOutputCommand.h  EndpointNamesArray.h  EndpointState.h  EndpointStates.h  HeadPanCommand.h  HeadState.h  HomingCommand.h  HomingState.h  IOComponentCommand.h  IOComponentCommandSrvRequest.h  IOComponentCommandSrvResponse.h  IOComponentConfiguration.h  IOComponentStatus.h  IODataStatus.h  IODeviceConfiguration.h  IODeviceStatus.h  IONodeConfiguration.h  IONodeStatus.h  IOStatus.h  InteractionControlCommand.h  InteractionControlState.h  JointCommand.h  JointLimits.h  NavigatorState.h  (+8 more)
robot/install/include/intera_motion_msgs/: EndpointTrackingError.h  InterpolatedPath.h  JointTrackingError.h  MotionCommandAction.h  MotionCommandActionFeedback.h  MotionCommandActionGoal.h  MotionCommandActionResult.h  MotionCommandFeedback.h  MotionCommandGoal.h  MotionCommandResult.h  MotionStatus.h  TrackingOptions.h  Trajectory.h  TrajectoryAnalysis.h  TrajectoryOptions.h  Waypoint.h  WaypointOptions.h  WaypointSimple.h
robot/install/include/ur_dashboard_msgs/: AddToLogRequest.h  AddToLogResponse.h  GetLoadedProgramRequest.h  GetLoadedProgramResponse.h  GetProgramStateRequest.h  GetProgramStateResponse.h  GetRobotModeRequest.h  GetRobotModeResponse.h  GetSafetyModeRequest.h  GetSafetyModeResponse.h  IsProgramRunningRequest.h  IsProgramRunningResponse.h  IsProgramSavedRequest.h  IsProgramSavedResponse.h  LoadRequest.h  LoadResponse.h  PopupRequest.h  PopupResponse.h  ProgramState.h  RawRequestRequest.h  RawRequestResponse.h  RobotMode.h  SafetyMode.h  SetModeAction.h  SetModeActionFeedback.h  SetModeActionGoal.h  SetModeActionResult.h  SetModeFeedback.h  SetModeGoal.h  SetModeResult.h
robot/install/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotModeDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h  SetSpeedSliderFractionRequest.h  SetSpeedSliderFractionResponse.h  ToolDataMsg.h
robot/install/lib/controller_stopper/: node
robot/install/lib/pkgconfig/: button_box.pc  controller_stopper.pc  intera_core_msgs.pc  intera_examples.pc  intera_interface.pc  intera_motion_msgs.pc  intera_tools_description.pc  sawyer_description.pc  ur_bringup.pc  ur_dashboard_msgs.pc  ur_description.pc  ur_driver.pc  ur_e_description.pc  ur_e_gazebo.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc
robot/src/: ur5e_robot_calibration.yaml
robot/src/button_box/: CMakeLists.txt  package.xml
robot/src/button_box/src/: button.py  (+1 more)
robot/src/dummy/: CMakeLists.txt
robot/src/sawyer/: CMakeLists.txt  package.xml
robot/src/sawyer/Learner_Responses/eval2/: subject0.txt  subject1_test1.txt  subject1_test2.txt  subject1_test3.txt  subject2_test1.txt  subject2_test2.txt  subject2_test3.txt  subject3_test1.txt  subject3_test2.txt  subject3_test3.txt  subject4_test1.txt
robot/src/sawyer/Learner_Responses/module2/: cyrus_test1.txt  subject1.txt  subject2.txt  subject3.txt  subject5.txt  subject8.txt  subject9.txt  test_0.txt  test_1.txt  test_10.txt  test_11.txt  test_14.txt  test_18.txt  test_3.txt  test_5.txt  test_6.txt  test_9.txt
robot/src/sawyer/action/: AdjustPoseTo.action  ButtonSend.action  CuffInteraction.action  GoToCartesianPose.action  HighTwo.action  InteractionControl.action  JointImpedance.action  JointMove.action  MultipleChoice.action  Wait.action  gripper.action
robot/src/sawyer/msg/: ButtonSendActionResult.msg  adjustPoseTo.msg
robot/src/sawyer/src/: apriltag_detect.py  camera.py  camera2.py  image.py  limb_plus.py  mock.py  mock1.py  module1.py  module1_firefox.sh  module2.py  module2_bkup.py  module3.py  module3_sawyer.py  module_template.py  nodejs.sh  print_cartesian_pose.py  print_joint_angles.py  response_test.py  subscribe.py  table.py  teachbot.py  test.py
robot/src/sawyer/srv/: CuffWays.srv  PlayAudio.srv  ScrollWheelSubscription.srv  SetRobotMode.srv
robot/src/ur/: CMakeLists.txt  README.md  package.xml  ur5e_robot_calibration.yaml
(+113 files in other folders)
