<?xml version="1.0"?>
<package>
  <name>TeachBot</name>
  <version>0.0.0</version>
  <description>Educational System for Workforce Development</description>

  <maintainer email="nselby@mit.edu">Nicholas S. Selby</maintainer>
  <license>BSD</license>
  <author email="nselby@mit.edu">Nicholas S. Selby</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>

</package>
