<?xml version="1.0"?>
<package>
  <name>sawyer</name>
  <version>1.0.0</version>
  <description>
    ROS package for use of Sawyer and peripherals for TeachBot
  </description>

  <maintainer email="nselby@mit.edu">
    Nicholas S. Selby
  </maintainer>
  <license>BSD</license>
  <url type="website">http://www.mit.edu/~nselby/teachbot.html</url>
  <url type="repository">
    https://github.com/Darbeloff/TeachBot
  </url>
  <author email="nselby@mit.edu">Nicholas S. Selby</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>intera_motion_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>intera_interface</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <!-- <build_depend>apriltag</build_depend> -->
  <build_depend>image_transport</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_motion_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <!-- <run_depend>apriltag</run_depend> -->
  <run_depend>image_transport</run_depend>

</package>
